# Async-Task-Hub

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
demo/: app.js  index.html  nginx.conf  styles.css
demo/compute_pi/: app.js  index.html
demo/dashboard/: app.js  index.html  styles.css
demo/document_analysis/: app.js  index.html
src/api/application/: services.py
src/api/domain/: models.py  repositories.py
src/api/domain/models/: __init__.py  payloads.py  task.py
src/api/infrastructure/: mappers.py
src/api/infrastructure/celery/: app.py  celery_task_manager.py  task_registry.py
src/api/presentation/: main.py  routes.py
src/app/application/: broadcaster.py  handlers.py  services.py
src/app/application/dtos/: __init__.py
src/app/domain/: exceptions.py  repositories.py
src/app/presentation/: main.py  naive_routes.py  naive_worker_routes.py  routes.py  websockets.py
src/app/worker/: main.py  reporter.py  tasks.py
src/naive/: __init__.py  storage.py  worker.py
src/naive/compute_pi/: __init__.py  storage.py  worker.py
src/naive/document_analysis/: __init__.py  storage.py  worker.py
src/naive_worker/compute_pi/: worker.py
src/setup/: __init__.py  api_config.py  app_config.py  celery_config.py  db_config.py  stream_config.py  worker_config.py
src/worker/: compute_pi_task.py  tasks.py
tests/: conftest.py  test_application_handlers.py  test_application_services.py  test_infrastructure_mappers.py  test_postgres_repository.py  test_presentation_routes.py  test_streams_integration.py
(+28 files in other folders)
