[project]
name = "posttager-pi"
version = "0.1.0"
description = "JetBrains Posttagger test task: Pi calculation via Celery"
requires-python = ">=3.11"
authors = [{ name = "Carlos Manuel Alfonso Basabe" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "celery>=5.3.0",
  "redis>=5.0.0",
  "inject>=5.2.0",
  "mpmath>=1.3.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=0.23.8",
]
dev = [
  "ruff>=0.6.8",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
log-level = "info"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]
lint.exclude = ["build", "dist", ".venv", "venv", "env", "__pycache__"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
